<?xml version="1.0" encoding="utf-8"?><!--
 * Copyright Txus Ballesteros 2017 (@txusballesteros)
 *
 * This file is part of Foobar.
 *
 * Foobar is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * Foobar is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with Foobar.  If not, see <http://www.gnu.org/licenses/>.
 *
 * Contact: Txus Ballesteros <txus.ballesteros@gmail.com>
-->
<resources>
  <string name="app_name">Brewery DB</string>
  <string name="app_subtitle">The final beers directory…</string>
  <string name="abv_pattern">%.1f</string>
  <string name="ibu_pattern">%.1f</string>
  <string name="is_organic">Is Organic</string>
  <string name="is_not_organic">Is not Organic</string>
  <string name="beer">Beer</string>
  <string name="search">Search</string>
  <string name="clear_filters">Clear Filters</string>
  <string name="done">Done</string>
  <string name="ingredients">Ingredients</string>
  <string name="breweries">Breweries</string>
  <string name="alpha_acid_min">Alpha Acid Min:</string>
  <string name="alpha_acid_max">Alpha Acid Max:</string>
  <string name="beta_acid_min">Beta Acid Min:</string>
  <string name="beta_acid_max">Beta Acid Max:</string>
  <string name="humulene_min">Humulene Min:</string>
  <string name="humulene_max">Humulene Max:</string>
  <string name="caryophyllene_min">Caryophyllene Min:</string>
  <string name="caryophyllene_max">Caryophyllene Max:</string>
  <string name="cohumulone_min">Cohumulone Min:</string>
  <string name="cohumulone_max">Cohumulone Max:</string>
  <string name="myrcene_min">Myrcene Min:</string>
  <string name="myrcene_max">Myrcene Max:</string>
  <string name="farnesene_min">Farnesene Min:</string>
  <string name="farnesene_max">Farnesene Max:</string>
  <string name="moisture_content">Moisture Content:</string>
  <string name="coarse_fine_difference">Coarse Fine Diff.:</string>
  <string name="diastatic_power">Diastatic Power:</string>
  <string name="potential">Potential:</string>
  <string name="protein">Protein:</string>
  <string name="dry_yield">Dry Yield:</string>
  <string name="soluble_nitrogen_ratio">Solu. Nitro. Ratio:</string>
  <string name="max_in_batch">Max In Batch:</string>
  <string name="origin">Origin:</string>
  <string name="since">Since:</string>
  <string name="attenuation_min">Attenuation Min:</string>
  <string name="attenuation_max">Attenuation Max:</string>
  <string name="type">Type:</string>
  <string name="ferment_temp_min">Ferment Temp. Min:</string>
  <string name="ferment_temp_max">Ferment Temp. Max:</string>
  <string name="alcohol_tolerance_min">Alcohol Tlce. Min:</string>
  <string name="alcohol_tolerance_max">Alcohol Tlce. Max:</string>
  <string name="format">Format:</string>
  <string name="something_was_wrong">Shit!! Something was wrong…</string>
  <string name="about">About</string>
  <string name="which_beer_are_you_want">Which beer are you want?</string>
  <string name="alcohol_by_volume">Alcohol by Volume</string>
  <string name="min">Min.</string>
  <string name="max">Max.</string>
  <string name="ibu">IBU:</string>
  <string name="international_bitterness_units">International Bitterness Units</string>
  <string name="abv">ABV:</string>
  <string name="style">Style</string>
  <string name="styles">Styles</string>
  <string name="brewery">Brewery</string>
  <string name="try_again">Try Again</string>
  <string name="field_separator">-</string>
  <string name="is_organic_search">Is Organic:</string>
  <string name="simbol_percent">%</string>
  <string name="beer_list_empty_message">Sorry!! We didn\'t found any beers for those filters.</string>
  <string name="beer_ingredients_empty_message">We don\'t have information about ingredients for this beer.</string>
  <string name="with_label">With Label:</string>
  <string name="with_label_explain">Show only beers with an image or a label.</string>
  <string name="is_organic_explain">Show only organic beers.</string>
</resources>
