<?xml version="1.0" encoding="utf-8"?>
<!--
 * Copyright Txus Ballesteros 2017 (@txusballesteros)
 *
 * This file is part of Foobar.
 *
 * Foobar is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * Foobar is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with Foobar.  If not, see <http://www.gnu.org/licenses/>.
 *
 * Contact: Txus Ballesteros <txus.ballesteros@gmail.com>
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android">
  <item
      android:id="@+id/action_beer_detail"
      android:icon="@drawable/ic_glass_mug"
      android:title="@string/beer" />
  <item
      android:id="@+id/action_beer_ingredients"
      android:icon="@drawable/ic_spa_24dp"
      android:title="@string/ingredients" />
  <item
      android:id="@+id/action_beer_breweries"
      android:icon="@drawable/ic_store_24dp"
      android:title="@string/breweries" />
</menu>