<?xml version="1.0" encoding="utf-8"?>
<!--
 * Copyright Txus Ballesteros 2017 (@txusballesteros)
 *
 * This file is part of Foobar.
 *
 * Foobar is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * Foobar is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with Foobar.  If not, see <http://www.gnu.org/licenses/>.
 *
 * Contact: Txus Ballesteros <txus.ballesteros@gmail.com>
-->
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:orientation="vertical">

  <android.support.v7.widget.AppCompatTextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:textSize="@dimen/text_size_normal"
      android:textColor="@color/gray_2"
      android:layout_marginLeft="@dimen/padding_normal"
      android:fontFamily="sans-serif"
      android:text="@string/ibu"/>

  <android.support.v7.widget.AppCompatTextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginLeft="@dimen/padding_normal"
      android:textSize="@dimen/text_size_normal"
      android:textColor="@color/gray_3"
      android:fontFamily="sans-serif"
      android:text="@string/international_bitterness_units"/>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginLeft="@dimen/padding_normal"
      android:layout_marginRight="@dimen/padding_normal"
      android:layout_marginTop="@dimen/padding_big"
      android:orientation="horizontal">

    <android.support.v7.widget.AppCompatEditText
        style="@style/Input.Rounded"
        android:id="@+id/ibuMin"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:inputType="number"
        android:gravity="center"
        android:maxLength="3"
        android:background="@drawable/rounded_input"
        android:hint="@string/min" />

    <android.support.v7.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_normal"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginLeft="@dimen/padding_normal"
        android:layout_marginRight="@dimen/padding_normal"
        android:text="@string/field_separator" />

    <android.support.v7.widget.AppCompatEditText
        style="@style/Input.Rounded"
        android:id="@+id/ibuMax"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:inputType="number"
        android:gravity="center"
        android:maxLength="3"
        android:hint="@string/max" />

  </LinearLayout>
</LinearLayout>