<?xml version="1.0" encoding="utf-8"?>
<!--
 * Copyright Txus Ballesteros 2017 (@txusballesteros)
 *
 * This file is part of Foobar.
 *
 * Foobar is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * Foobar is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with Foobar.  If not, see <http://www.gnu.org/licenses/>.
 *
 * Contact: Txus Ballesteros <txus.ballesteros@gmail.com>
-->
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

  <RelativeLayout
    android:id="@+id/content"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/padding_normal">

    <android.support.v7.widget.AppCompatTextView
        style="@style/Text.Branded"
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_medium"
        tools:text="Hop Name"/>

    <android.support.v7.widget.AppCompatTextView
        style="@style/Text"
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_normal"
        android:layout_below="@+id/name"
        tools:text="Description..."/>

    <FrameLayout
        android:id="@+id/originDivider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/description">

      <include layout="@layout/include_line_decorator" />

    </FrameLayout>

    <LinearLayout
        android:id="@+id/origin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/originDivider">

      <android.support.v7.widget.AppCompatTextView
          style="@style/Text"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/origin"/>

      <android.support.v7.widget.AppCompatTextView
          style="@style/Text.Light"
          android:id="@+id/country"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginLeft="@dimen/padding_normal"
          tools:text="Spain"/>

    </LinearLayout>

    <FrameLayout
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/origin">

      <include layout="@layout/include_line_decorator" />
    </FrameLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/divider"
        android:stretchColumns="1,3">

      <TableRow android:paddingBottom="@dimen/padding_normal">
        <android.support.v7.widget.AppCompatTextView
            style="@style/Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alpha_acid_min" />

        <android.support.v7.widget.AppCompatTextView
            style="@style/Text.Light"
            android:id="@+id/alphaAcidMin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/padding_normal"
            tools:text="55.6"/>

        <android.support.v7.widget.AppCompatTextView
            style="@style/Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alpha_acid_max"/>

        <android.support.v7.widget.AppCompatTextView
            style="@style/Text.Light"
            android:id="@+id/alphaAcidMax"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/padding_normal"
            tools:text="55.6"/>
      </TableRow>
      <TableRow android:paddingBottom="@dimen/padding_normal">
        <android.support.v7.widget.AppCompatTextView
            style="@style/Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/beta_acid_min" />

        <android.support.v7.widget.AppCompatTextView
            style="@style/Text.Light"
            android:id="@+id/betaAcidMin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/padding_normal"
            tools:text="55.6"/>

        <android.support.v7.widget.AppCompatTextView
            style="@style/Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/beta_acid_max"/>

        <android.support.v7.widget.AppCompatTextView
            style="@style/Text.Light"
            android:id="@+id/betaAcidMax"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/padding_normal"
            tools:text="55.6"/>
      </TableRow>
      <TableRow android:paddingBottom="@dimen/padding_normal">
        <android.support.v7.widget.AppCompatTextView
            style="@style/Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/humulene_min" />

        <android.support.v7.widget.AppCompatTextView
            style="@style/Text.Light"
            android:id="@+id/humuleneMin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/padding_normal"
            tools:text="55.6"/>

        <android.support.v7.widget.AppCompatTextView
            style="@style/Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/humulene_max"/>

        <android.support.v7.widget.AppCompatTextView
            style="@style/Text.Light"
            android:id="@+id/humuleneMax"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/padding_normal"
            tools:text="55.6"/>
      </TableRow>
      <TableRow android:paddingBottom="@dimen/padding_normal">
        <android.support.v7.widget.AppCompatTextView
            style="@style/Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/caryophyllene_min" />

        <android.support.v7.widget.AppCompatTextView
            style="@style/Text.Light"
            android:id="@+id/caryophylleneMin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/padding_normal"
            tools:text="55.6"/>

        <android.support.v7.widget.AppCompatTextView
            style="@style/Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/caryophyllene_max"/>

        <android.support.v7.widget.AppCompatTextView
            style="@style/Text.Light"
            android:id="@+id/caryophylleneMax"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/padding_normal"
            tools:text="55.6"/>
      </TableRow>
      <TableRow android:paddingBottom="@dimen/padding_normal">
        <android.support.v7.widget.AppCompatTextView
            style="@style/Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cohumulone_min" />

        <android.support.v7.widget.AppCompatTextView
            style="@style/Text.Light"
            android:id="@+id/cohumuloneMin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/padding_normal"
            tools:text="55.6"/>

        <android.support.v7.widget.AppCompatTextView
            style="@style/Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cohumulone_max"/>

        <android.support.v7.widget.AppCompatTextView
            style="@style/Text.Light"
            android:id="@+id/cohumuloneMax"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/padding_normal"
            tools:text="55.6"/>
      </TableRow>
      <TableRow android:paddingBottom="@dimen/padding_normal">
        <android.support.v7.widget.AppCompatTextView
            style="@style/Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/myrcene_min" />

        <android.support.v7.widget.AppCompatTextView
            style="@style/Text.Light"
            android:id="@+id/myrceneMin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/padding_normal"
            tools:text="55.6"/>

        <android.support.v7.widget.AppCompatTextView
            style="@style/Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/myrcene_max"/>

        <android.support.v7.widget.AppCompatTextView
            style="@style/Text.Light"
            android:id="@+id/myrceneMax"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/padding_normal"
            tools:text="55.6"/>
      </TableRow>
      <TableRow android:paddingBottom="@dimen/padding_normal">
        <android.support.v7.widget.AppCompatTextView
            style="@style/Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/farnesene_min" />

        <android.support.v7.widget.AppCompatTextView
            style="@style/Text.Light"
            android:id="@+id/farneseneMin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/padding_normal"
            tools:text="55.6"/>

        <android.support.v7.widget.AppCompatTextView
            style="@style/Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/farnesene_max"/>

        <android.support.v7.widget.AppCompatTextView
            style="@style/Text.Light"
            android:id="@+id/farneseneMax"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/padding_normal"
            tools:text="55.6"/>
      </TableRow>
    </TableLayout>
  </RelativeLayout>
</android.support.v4.widget.NestedScrollView>
