<?xml version="1.0" encoding="utf-8"?>
<!--
 * Copyright Txus Ballesteros 2017 (@txusballesteros)
 *
 * This file is part of Foobar.
 *
 * Foobar is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * Foobar is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with Foobar.  If not, see <http://www.gnu.org/licenses/>.
 *
 * Contact: Txus Ballesteros <txus.ballesteros@gmail.com>
-->
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

  <RelativeLayout
    android:id="@+id/content"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/padding_normal">

    <android.support.v7.widget.AppCompatTextView
        style="@style/Text.Branded"
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_medium"
        tools:text="Yeast Name"/>

    <android.support.v7.widget.AppCompatTextView
        style="@style/Text"
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_normal"
        android:layout_below="@+id/name"
        tools:text="Description..."/>

    <FrameLayout
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/description">

      <include layout="@layout/include_line_decorator" />
    </FrameLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/divider"
        android:stretchColumns="1,3">

      <TableRow android:paddingBottom="@dimen/padding_normal">
        <android.support.v7.widget.AppCompatTextView
            style="@style/Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type" />

        <android.support.v7.widget.AppCompatTextView
            style="@style/Text.Light"
            android:id="@+id/yeastType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/padding_normal"
            tools:text="55.6"/>

        <android.support.v7.widget.AppCompatTextView
            style="@style/Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/format" />

        <android.support.v7.widget.AppCompatTextView
            style="@style/Text.Light"
            android:id="@+id/yeastFormat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/padding_normal"
            tools:text="55.6"/>
      </TableRow>
      <TableRow android:paddingBottom="@dimen/padding_normal">
        <android.support.v7.widget.AppCompatTextView
            style="@style/Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/attenuation_min" />

        <android.support.v7.widget.AppCompatTextView
            style="@style/Text.Light"
            android:id="@+id/attenuationMin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/padding_normal"
            tools:text="55.6"/>

        <android.support.v7.widget.AppCompatTextView
            style="@style/Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/attenuation_max"/>

        <android.support.v7.widget.AppCompatTextView
            style="@style/Text.Light"
            android:id="@+id/attenuationMax"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/padding_normal"
            tools:text="55.6"/>
      </TableRow>
      <TableRow android:paddingBottom="@dimen/padding_normal">
        <android.support.v7.widget.AppCompatTextView
            style="@style/Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ferment_temp_min" />

        <android.support.v7.widget.AppCompatTextView
            style="@style/Text.Light"
            android:id="@+id/fermentTempMin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/padding_normal"
            tools:text="55.6"/>

        <android.support.v7.widget.AppCompatTextView
            style="@style/Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ferment_temp_max"/>

        <android.support.v7.widget.AppCompatTextView
            style="@style/Text.Light"
            android:id="@+id/fermentTempMax"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/padding_normal"
            tools:text="55.6"/>
      </TableRow>
      <TableRow android:paddingBottom="@dimen/padding_normal">
        <android.support.v7.widget.AppCompatTextView
            style="@style/Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alcohol_tolerance_min" />

        <android.support.v7.widget.AppCompatTextView
            style="@style/Text.Light"
            android:id="@+id/alcoholToleranceMin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/padding_normal"
            tools:text="55.6"/>

        <android.support.v7.widget.AppCompatTextView
            style="@style/Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alcohol_tolerance_max"/>

        <android.support.v7.widget.AppCompatTextView
            style="@style/Text.Light"
            android:id="@+id/alcoholToleranceMax"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/padding_normal"
            tools:text="55.6"/>
      </TableRow>
    </TableLayout>
  </RelativeLayout>
</android.support.v4.widget.NestedScrollView>
