<?xml version="1.0" encoding="utf-8"?>
<!--
 * Copyright Txus Ballesteros 2017 (@txusballesteros)
 *
 * This file is part of Foobar.
 *
 * Foobar is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * Foobar is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with Foobar.  If not, see <http://www.gnu.org/licenses/>.
 *
 * Contact: Txus Ballesteros <txus.ballesteros@gmail.com>
-->
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="wrap_content">

  <android.support.v7.widget.AppCompatTextView
      android:id="@+id/appCompatTextView"
      style="@style/Text"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginLeft="0dp"
      android:layout_marginRight="0dp"
      android:layout_marginTop="0dp"
      android:text="@string/abv"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <android.support.v7.widget.AppCompatTextView
      android:id="@+id/appCompatTextView2"
      style="@style/Text.Light"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginLeft="0dp"
      android:layout_marginRight="0dp"
      android:layout_marginTop="0dp"
      android:text="@string/alcohol_by_volume"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/appCompatTextView" />

  <android.support.v7.widget.AppCompatTextView
      android:id="@+id/abv"
      style="@style/Text.Branded"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentBottom="true"
      android:gravity="center"
      android:textSize="@dimen/text_size_big"
      tools:text="4.5"
      android:layout_marginLeft="0dp"
      app:layout_constraintLeft_toLeftOf="parent"
      android:layout_marginRight="0dp"
      app:layout_constraintRight_toRightOf="parent"
      android:layout_marginTop="8dp"
      app:layout_constraintTop_toBottomOf="@+id/appCompatTextView2" />

  <android.support.v7.widget.AppCompatTextView
      android:id="@+id/appCompatTextView3"
      style="@style/Text.Light"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentBottom="true"
      android:gravity="center"
      android:textSize="@dimen/text_size_normal"
      android:text="@string/simbol_percent"
      app:layout_constraintBaseline_toBaselineOf="@+id/abv"
      app:layout_constraintLeft_toRightOf="@+id/abv"
      android:layout_marginLeft="8dp" />

</android.support.constraint.ConstraintLayout>